# snake_python

./: .gitignore  .packlist  .safe_gitignore  README.md  audio_manager.py  build.sh  display.py  food.py  game.py  main.py  pyproject.toml  snake.py
.github/workflows/: deploy.yml
game_logic/: display.py  food.py  snake.py
gh-pages/: index.html  snake_python.apk
sounds/: apple_bite.wav:Zone.Identifier  crash.wav:Zone.Identifier  f1_sound.wav:Zone.Identifier
sprite/: apple_sprite.png:Zone.Identifier
